fix for settings being too narrow or too wide

--- a/public/stylesheets/scss/main.scss
+++ b/public/stylesheets/scss/main.scss
@@ -272,6 +272,7 @@ header {
   right: 0;
   top: 30px;
   border-left: 1px solid #111;
+  width: 100%;
   max-width: 400px;
   &.open {
     display: block;
